--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@ h3{
 
 		<header class="row">
 			<div class="col-sm-6">
-				<img src="images/logo.png" alt="" class="img-responsive">
+				<img src="images/logo.png" alt="" >
 			</div>
 			<div class="col-sm-6 text-right no-pad">
-				<img src="images/top.png" alt="" class="img-responsive">
+				<img src="images/top.png" alt="" >
 			</div>
 		</header>
 
